--- a/templates/conf.j2
+++ b/templates/conf.j2
@@ -8,9 +8,10 @@ export ANT_OPTS="-Xms128m -Xmx800m"
 
 # DSpace Paths
 DSPACE_GIT="git@github.com:OULibraries/shareok_dspace"
-DSPACE_SRC=/vagrant/shareok_dspace
-DSPACE_RUN=/srv/shareok/dspace
+DSPACE_SRC="/home/vagrant/shareok_dspace"
+DSPACE_RUN="/srv/shareok/dspace"
 DSPACE_DATA="/mnt/shareokdata/5x-assetstore0"
+
 
 # DSpace Database Configuration
 DB_HOST=localhost
@@ -20,3 +21,6 @@ DB_ADMIN_PASS=libacct
 # Currently using the same name for user and db
 DB_NAME=dspace
 DB_PASS=dspace
+
+# 
+DB_EXPORT=/srv/shareok/export/shareok.sql
