try to get scope right and succeed

--- a/templates/m2_settings.xml.j2
+++ b/templates/m2_settings.xml.j2
@@ -5,8 +5,8 @@
   <servers>
     <server>
       <id>atmire.com-releases</id>
-      <username>{{ atmire.mvnuser }}</username>
-      <password>{{ atmire.mvnpass }}</password>
+      <username>{{ hostvars.localhost.atmire_user }}</username>
+      <password>{{ hostvars.localhost.atmire_pass }}</password>
     </server>
   </servers>
 
