Let build script do git checkout if repo isn't here.

--- a/templates/conf.j2
+++ b/templates/conf.j2
@@ -7,7 +7,7 @@ export ANT_OPTS="-Xms128m -Xmx800m"
 
 
 # DSpace Paths
-DSPACE_GIT="{{ dspace.repo }}"
+DSPACE_GIT="{{ dspace.git }}"
 DSPACE_SRC="{{ dspace.src }}"
 DSPACE_RUN="{{ dspace.support }}/dspace"
 DSPACE_DATA="{{ dspace.data }}"
